<resources>
    <string name="app_name">PC volume changer</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Change volume application</string>
    <string name="refresh_btn">Refresh</string>
    <string name="connect_btn_show">Show server settings</string>
    <string name="connect_btn_hide">Hide server settings</string>
    <string name="ok_btn">OK</string>
    <string name="server_ip">server ip</string>
    <string name="server_port">server port</string>
</resources>
